--- a/about.html
+++ b/about.html
@@ -26,24 +26,30 @@
       <h2>About Me</h2>
       <div class="cards">
 
-        <div class="card">
-          <img src="static/image/engineer.jpg" alt="Engineering Work">
-          <h3>Chemical Engineering</h3>
-          <p>I hold a degree in Chemical Engineering from Caledonian College of Engineering, with a focus on process design and optimization.I hold a degree in Chemical Engineering from Caledonian College of Engineering, with a focus on process design and optimization.</p>
-        </div>
+      <figure class="card">
+  <img src="static/image/engineer.jpg" alt="Engineering Work">
+  <figcaption>
+    <h3>Chemical Engineering</h3>
+    <p>I hold a degree in Chemical Engineering from Caledonian College of Engineering, with a focus on process design and optimization. I hold a degree in Chemical Engineering from Caledonian College of Engineering, with a focus on process design and optimization.</p>
+  </figcaption>
+</figure>
 
-        <div class="card">
-          <img src="static/image/blogging.jpg" alt="Blogging and Writing">
-          <h3>Blogging & Sharing</h3>
-          <p>I love to share technical insights, tutorials, and reflections on my learning journey through my blog. I love to share technical insights, tutorials, and reflections on my learning journey through my blog.</p>
-        </div>
+<figure class="card">
+  <img src="static/image/blogging.jpg" alt="Blogging and Writing">
+  <figcaption>
+    <h3>Blogging & Sharing</h3>
+    <p>I love to share technical insights, tutorials, and reflections on my learning journey through my blog. I love to share technical insights, tutorials, and reflections on my learning journey through my blog.</p>
+  </figcaption>
+</figure>
 
-        <div class="card">
-          <img src="static/image/skills.jpg" alt="Skills and Projects">
-          <h3>Technical Skills</h3>
-          <p>I have experience with Aspen HYSYS, process safety, and UX design, and I'm passionate about continuous learning.I have experience with Aspen HYSYS, process safety, and UX design, and I'm passionate about continuous learning.</p>
-        </div>
-
+<figure class="card">
+  <img src="static/image/skills.jpg" alt="Skills and Projects">
+  <figcaption>
+    <h3>Technical Skills</h3>
+    <p>I have experience with Aspen HYSYS, process safety, and UX design, and I'm passionate about continuous learning. I have experience with Aspen HYSYS, process safety, and UX design, and I'm passionate about continuous learning.</p>
+  </figcaption>
+</figure>
+        
       </div>
     </section>
   </main>
